Fix Gnocchi tarball URL in tests
Change-Id: I1ce41448695e784b09ab1009111d07a735fc90ac

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,10 @@ setenv =
    VIRTUAL_ENV={envdir}
    GNOCCHI_CLIENT_EXEC_DIR={envdir}/bin
 passenv = GNOCCHI_* OS_TEST_TIMEOUT OS_STDOUT_CAPTURE OS_STDERR_CAPTURE OS_LOG_CAPTURE
+# NOTE(jd): the -e argument is on its own line so it's passed as an argument to pip
 deps = .[test]
-       http://tarballs.openstack.org/gnocchi/gnocchi-master.tar.gz#egg=gnocchi[postgresql,file]
+       -e
+       git+https://github.com/gnocchixyz/gnocchi.git#egg=gnocchi[postgresql,file]
        pifpaf
 # NOTE(tonyb): This project has chosen to *NOT* consume upper-constraints.txt
 commands = pifpaf run gnocchi -- python setup.py test --slowest --testr-args='{posargs}'
