Remove hacking dependency for pep8
Hacking is not maintained and depends on an old flake8 version.
Switch to flake8 and a few standard extensions.

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,13 @@ commands = pifpaf run gnocchi -- pytest {posargs:gnocchiclient/tests}
 
 [testenv:pep8]
 basepython = python3
-deps = hacking<0.13,>=0.12
+deps = flake8
+       flake8-import-order
+       flake8-blind-except
+       flake8-builtins
+       flake8-docstrings
+       flake8-rst-docstrings
+       flake8-logging-format
        doc8>=0.8.0
 commands = flake8
            doc8 --ignore-path doc/source/gnocchi.rst --ignore-path-errors doc/source/shell.rst;D000 doc/source
@@ -40,8 +46,9 @@ commands =
 
 [flake8]
 show-source = True
-ignore =
-exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build
+ignore = D100,D101,D102,D103,D104,D105,D107,A002,A003,RST304
+exclude=.git,.tox,dist,doc,*egg,build
+application-import-names = gnocchiclient
 
 [pytest]
 addopts = --verbose --numprocesses=auto
